<resources>
    <string name="app_name">F1_APP</string>
    <string name="title_name_login">Let\'s Get Familiar</string>
    <string name="name_Title_SecondTitle">Introduce Yourself</string>
    <string name="NameFirstLabel_Login">First name</string>
    <string name="NameSecondLabel_Login">Last name</string>
    <string name="text_firstEditText">Type in your first name</string>
    <string name="text_secondEditText">Type in your last name</string>
    <string name="Name_btn">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>